--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 	<body>
 		<h1>Welcome to NoEnd_'s site!</h1>
 		<p>oh hello hi</p>
+		<a href="https://github.com/NoEnd-yt/NoEnd-yt.github.io/blob/main/FO%20Packwiz/pack.toml" download>Modpack download link</a>
 	</body>
 </html>
