Change modpack download link and general font

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<font face="Roboto">
 	</head>
 	<body>
 		<h1>Welcome to NoEnd_'s site!</h1>
 		<p>oh hello hi</p>
-		<a href="https://github.com/NoEnd-yt/NoEnd-yt.github.io/blob/main/FO%20Packwiz/pack.toml" download>Modpack download link</a>
+		<a href="https://github.com/NoEnd-yt/NoEnd-yt.github.io/releases/download/v1.0/Fantastically.Optimized.1.18.2.zip" download>Modpack download link</a>
 	</body>
 </html>
